Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-49321

[BP to 6.6.4] Reconfigure of interface does not work going from * to specific IP and vice versa

    XMLWordPrintable

Details

    • 1

    Description

      The hostname field is being ignored in the comparison to see if the interface descriptor changed.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-49321
          # Subject Branch Project Status CR V

          Activity

            People

              Abhijeeth.Nuthan Abhijeeth Nuthan
              Abhijeeth.Nuthan Abhijeeth Nuthan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty