MB-49321: Allow reconfig of hostname for interfaces

Backport of MB-42836: http://review.couchbase.org/c/kv_engine/+/140635

The hostname was ignored when checking to see if the interface
descriptor had changed causing us to only detect cases where
the port number changed.

For reconfig of hostname to work on Linux we need to call SO_REUSEPORT
(see https://stackoverflow.com/a/14388707/92516 )

Change-Id: I5db3c925aa74eeaea1966dbea8b1dd7a048ed74d
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/164954
Well-Formed: Restriction Checker
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>