protocol/connection/client_connection.h
@@ -293,6 +293,14 @@ public:
     // channel to memcached. Used for multi-connection testing.
     std::unique_ptr<MemcachedConnection> clone();
 
+    std::string getName() const {
+        return name;
+    }
+
+    void setName(std::string nm) {
+        name = std::move(nm);
+    }
+
     in_port_t getPort() const {
         return port;
     }
@@ -903,6 +911,7 @@ protected:
     BIO* bio = nullptr;
     SOCKET sock = INVALID_SOCKET;
     std::string tag;
+    std::string name;
     boost::optional<std::chrono::microseconds> traceData;
 
     typedef std::unordered_set<uint16_t> Featureset;
